--- a/main/templates/registration/pas_res_complete.html
+++ b/main/templates/registration/pas_res_complete.html
@@ -9,5 +9,5 @@
 {% endblock %}
 
 {% block content %}
-  <p>Ваш новый пароль был установлен. Вы можете <a href="{% url 'login' %}">войти</a> сейчас</p>
+  <p>Ваш новый пароль был установлен. Вы можете <a href="/login">войти</a> сейчас</p>
 {% endblock %}
