--- a/main/templates/base/base.html
+++ b/main/templates/base/base.html
@@ -1,17 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru" class="h-100">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{% block title %}{% endblock %}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-
-    <style>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>{% block title %}{% endblock %}</title>
+  <!--    <link-->
+  <!--      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"-->
+  <!--      rel="stylesheet"-->
+  <!--      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"-->
+  <!--      crossorigin="anonymous"-->
+  <!--    />-->
+  <link href="{% static 'main/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"/>
+  <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -25,27 +26,30 @@
           font-size: 3.5rem;
         }
       }
-    </style>
-    {% block extra_css %}{% endblock %}
-  </head>
-  <body class="d-flex flex-column h-100">
-    {% include 'base/menu.html' %}
 
-    <main class="flex-shrink-0">
-      <div class="container mt-4 mb-4">
-        <h1 class="mb-4">
-          {% block heading %}
-          {% endblock %}
-        </h1>
-        {% block content %}
-        {% endblock %}
-      </div>
-    </main>
+  </style>
+  {% block extra_css %}{% endblock %}
+</head>
+<body class="d-flex flex-column h-100">
+{% include 'base/menu.html' %}
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<main class="flex-shrink-0">
+  <div class="container mt-4 mb-4">
+    <h1 class="mb-4">
+      {% block heading %}
+      {% endblock %}
+    </h1>
+    {% block content %}
+    {% endblock %}
+  </div>
+</main>
+
+<!--    <script-->
+<!--      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"-->
+<!--      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"-->
+<!--      crossorigin="anonymous"-->
+<!--    ></script>-->
+<footer></footer>
+<script src="{% static 'main/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+</body>
 </html>
