--- a/main/templates/pages/profile.html
+++ b/main/templates/pages/profile.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-
+{% load static %}
 {% block title %}
   {{ pagename }}
 {% endblock %}
@@ -12,9 +12,14 @@
   <div class="row g-3">
     <div class="col">
       <div class="container">
-        <img src="/media/{{ user.profile.profile_image }}" class="img-fluid">
-        {% if user == request.user%}
 
+        {% if user.profile.profile_image == null %}
+          <img src="{% static '/main/No-image.png' %}" class="img-fluid">
+        {% else %}
+          <img src="/media/{{ user.profile.profile_image }}" class="img-fluid">
+        {% endif %}
+
+        {% if user == request.user%}
         <a href="/profile_edit/">Редактировать профиль</a>
 
         {% if request.user.is_staff or request.user.is_superuser %}
@@ -66,7 +71,7 @@
     <div class="col">
       <div class="container">
         <dl class="row">
-          <a href="{%url 'votings_list' %}?user={{user.id}}">
+          <a href="{% url 'votings_list' %}?user={{user.id}}">
             <button class="btn btn-secondary" type="button">Созданные голосования</button>
           </a>
         </dl>
@@ -90,9 +95,9 @@
               Голоса
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-              {%for vote in votes%}
+              {% for vote in votes %}
               <li><a class="dropdown-item" href="{% url 'voting_page' vote.variants.first.voting.id %}">Голосование '{{vote.variants.first.voting.name}}'</a></li>
-              {%endfor%}
+              {% endfor %}
             </ul>
           </div>
         </dl>
