Temporary removed votings edit page

--- a/main/templates/pages/voting.html
+++ b/main/templates/pages/voting.html
@@ -45,7 +45,7 @@
                 <p class="bd-highlight m-0">Завершено: {{ voting.finishes }}</p>
               {% endif %}
               <a href="/voting/{{ voting.id }}/results" class="bd-highlight m-0 btn btn-link p-0">Посмотреть результаты</a>
-              <p align="right"><a href="/voting/{{voting.id}}/edit" class="btn btn-primary ">Редактировать</a></p>
+<!--              <p align="right"><a href="/voting/{{voting.id}}/edit" class="btn btn-primary ">Редактировать</a></p>-->
             </div>
 
         </div>
