--- a/main/templates/base/base.html
+++ b/main/templates/base/base.html
@@ -1,17 +1,12 @@
 {% load static %}
+{% load bootstrap5 %}
 <!DOCTYPE html>
 <html lang="ru" class="h-100">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>{% block title %}{% endblock %}</title>
-  <!--    <link-->
-  <!--      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"-->
-  <!--      rel="stylesheet"-->
-  <!--      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"-->
-  <!--      crossorigin="anonymous"-->
-  <!--    />-->
-  <link href="{% static 'main/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"/>
+  <link href="{% static 'main/bootstrap/css/bootstrap.css' %}" rel="stylesheet"/>
   <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -43,12 +38,6 @@
     {% endblock %}
   </div>
 </main>
-
-<!--    <script-->
-<!--      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"-->
-<!--      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"-->
-<!--      crossorigin="anonymous"-->
-<!--    ></script>-->
 <footer></footer>
 <script src="{% static 'main/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
