--- a/main/templates/pages/votingEdit.html
+++ b/main/templates/pages/votingEdit.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% load bootstrap5 %}
 
 {% block title %}
 {{ pagename }}
@@ -11,14 +12,16 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-3">
+  <div class="col">
     <div class="container">
-      <form method="post">
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{form}}
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">Сохранить</button>
+        {% endbuttons %}
       </form>
     </div>
   </div>
 </div>
-
 {% endblock %}
