--- a/main/templates/pages/voting_results.html
+++ b/main/templates/pages/voting_results.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block extra_info %}
-  <hr />
   <div style="width: 50%" class="mx-auto">
     <ul class="list-group">
       {% for key, value in facts.items %}
@@ -15,7 +14,7 @@
   </div>
   <hr />
   {{ plotly|safe }}
-  <div class="d-flex bd-highlight align-items-center mt-4 mb-2">
+  <div class="d-flex bd-highlight align-items-center">
     <h3 class="text-primary">{{ voting.author }}</h3>
     <div class="d-flex flex-column mb-0 ms-auto">
       {% if today > voting.finishes %}
