--- a/main/templates/base/base.html
+++ b/main/templates/base/base.html
@@ -2,46 +2,48 @@
 {% load bootstrap5 %}
 <!DOCTYPE html>
 <html lang="ru" class="h-100">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>{% block title %}{% endblock %}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-          crossorigin="anonymous"></script>
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>{% block title %}{% endblock %}</title>
+  {% bootstrap_css %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
       }
-    }
 
-  </style>
-  {% block extra_css %}{% endblock %}
-</head>
-<body class="d-flex flex-column h-100">
-{% include 'base/menu.html' %}
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
 
-<main class="flex-shrink-0">
-  <div class="container mt-4 mb-4">
-    <h1 class="mb-4">
-      {% block heading %}
-      {% endblock %}
-    </h1>
-    {% block content %}
+    </style>
+    {% block extra_css %}
+      <link rel="stylesheet" href="{% static 'main/css/style.css'%}"/>
     {% endblock %}
-  </div>
-</main>
-<footer></footer>
-</body>
+  </head>
+  <body class="d-flex flex-column h-100">
+  {% include 'base/menu.html' %}
+
+  <main class="flex-shrink-0">
+    <div class="container mt-4 mb-4">
+      <h1 class="mb-4">
+        {% block heading %}
+        {% endblock %}
+      </h1>
+      {% block content %}
+      {% endblock %}
+    </div>
+  </main>
+  <footer></footer>
+  {% bootstrap_javascript %}
+  {% block scripts %}
+  {% endblock %}
+  </body>
 </html>
