--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -7,18 +7,18 @@
 {% block content %}
   <div class="d-flex h-300 text-center">
     <div class="mt-5 d-flex w-50 h-300 p-3 mx-auto flex-column">
-
-        <h1 class="mt-4 mb-4">Добро пожаловать на лучший сайт с лучшими голосованиями!</h1>
-        <h4 class=" mt-4">Здесь вы можете оставить отзыв/мнение о чем угодно, а также создать своё собственное голосование,
-          чтобы узнать мнение других посетителей нашего сайта.</h4>
+      <h3 class=" mt-4">Здесь вы можете оставить отзыв/мнение о чем угодно, а также создать своё собственный
+        опрос,
+        чтобы узнать мнение других посетителей нашего сайта.</h3>
       {% if auth %}
       {% else %}
-        <h5 class="lead mt-4">Просим вас обратить внимание, что создавать голосования и оставлять голоса могут только авторизованные пользователи.</h5>
-        <p  class="lead mt-4">
-          <a href="accounts/register/" class="btn btn-lg btn-secondary fw-bold border-white bg-dark">Зарегистрироваться</a>
+        <h5 class="lead mt-4">Создавать опросы и оставлять голоса могут только авторизованные пользователи.</h5>
+        <p class="lead mt-4">
+          <a href="accounts/register/"
+             class="btn btn-lg btn-secondary fw-bold border-white bg-dark">Зарегистрироваться</a>
           <a href="login/" class="btn btn-lg btn-secondary fw-bold border-white bg-dark">Войти</a>
         </p>
       {% endif %}
-      </div>
+    </div>
   </div>
 {% endblock %}
