--- a/main/templates/pages/voting.html
+++ b/main/templates/pages/voting.html
@@ -1,67 +1,83 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block title %}
-{{ pagename }}
+  {{ pagename }}
 {% endblock %}
 
 {% block content %}
-<div class="card">
-  <div class="card-header">
-    <div class="d-flex bd-highlight align-items-center">
-      <h1 class="bd-highlight p-1 card-title me-2">{{ voting.name }}</h1>
-      {% if today < voting.published %}
-      <span class="badge bg-secondary fs-6">Не началось</span>
-      {% elif today > voting.published and today < voting.finishes %}
-      <span class="badge bg-primary fs-6">В прогрессе</span>
-      {% elif today > voting.finishes %}
-      <span class="badge bg-success fs-6">Завершено</span>
-      {% endif %}
-      <div class="ms-auto d-flex flex-column align-items-center">
-        <p class="bd-highlight mb-0">Начало: {{ voting.published }}</p>
-        <a
-          href="/voting/{{ voting.id }}/complain"
-          class="bd-highlight m-0 btn btn-link p-0"
-        >Пожаловаться</a>
+  <div class="card">
+    <div class="card-header">
+      <div class="flex d-flex bd-highlight align-items-center">
+        <h1 class="bd-highlight card-title text-break fs-3 me-auto">{{ voting.name }}</h1>
+        <div class="ms-auto d-flex bd-highlight justify-content-center align-items-center flex-wrap">
+        <span class="me-2">
+          {% if today < voting.published %}
+            <span class="badge bg-secondary fs-6">Не началось</span>
+          {% elif today > voting.published and today < voting.finishes %}
+            <span class="badge bg-primary fs-6">В прогрессе</span>
+          {% elif today > voting.finishes %}
+            <span class="badge bg-success fs-6">Завершено</span>
+          {% endif %}
+        </span>
+          <p class="mb-0 text-primary fs-2 fw-bold">ID: {{ voting.id }}</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  {% if voting.image == '' %}
-  <img
-    src="{% static 'main/No-image.png' %}"
-    class="card-img-top shadow mt-3 mb-3 bg-white rounded mx-auto"
-    style="width: 40%"
-  />
-  {% else %}
-  <img
-    src="/media/{{ voting.image }}"
-    class="card-img-top shadow mt-3 mb-3 bg-white rounded mx-auto "
-  />
-  {% endif %}
-  <div class="card-body m-2 mb-0">
-    <h3 style="text-align: justify">{{ voting.description }}</h3>
-  </div>
-  {% block extra_info %}
-  {% endblock %}
-  <div class="card-footer">
-    <div class="d-flex bd-highlight align-items-center">
-      <h2 class="bd-highlight text-primary mb-0">{{ voting.author }}</h2>
-      <div class="d-flex flex-column mb-0 ms-auto">
-        {% if today > voting.finishes %}
-        <p class="bd-highlight m-0">Завершено: {{ voting.finishes }}</p>
-        {% endif %}
-        {% block results %}
-          <a href="/voting/{{ voting.id }}/results" class="bd-highlight m-0 btn btn-link p-0">Посмотреть результаты</a>
-        {% endblock %}
-        {% if request.user == voting.author %}
-        <p align="center" class="mb-0"><a href="/voting/{{voting.id}}/edit" class="btn btn-primary">Редактировать</a>
-        </p>
-        {% endif %}
+    <div class="d-flex card-body">
+      {% if voting.prev_voting %}
+        <a href="{% url 'voting_page' id=voting.prev_voting.id %}" class="me-auto ms-2">
+          <i
+            class="bi bi-arrow-left-square-fill ms-auto"
+            style="font-size: 2rem;"
+            title="Предыдущий опрос"
+          >
+          </i>
+        </a>
+      {% endif %}
+      {% if voting.next_voting %}
+        <a href="{% url 'voting_page' id=voting.next_voting.id %}" class="me-2 ms-auto ">
+          <i
+            class="bi bi-arrow-right-square-fill"
+            style="font-size: 2rem; cursor: pointer;"
+            title="Следующий опрос"
+          >
+          </i>
+        </a>
+      {% endif %}
+    </div>
+    {% if voting.image == '' %}
+      <img
+        src="{% static 'main/No-image.png' %}"
+        class="image card-img-top bg-white rounded mx-auto"
+      />
+    {% else %}
+      <img
+        src="/media/{{ voting.image }}"
+        class="image card-img-top bg-white rounded mx-auto"
+      />
+    {% endif %}
+
+    <div class="card-body mb-0">
+      <h3 style="text-align: justify">{{ voting.description }}</h3>
+    </div>
+    {% block extra_info %}
+    {% endblock %}
+    <div class="card-footer p-3">
+      <div class="d-flex bd-highlight align-items-center">
+        <h2 class="bd-highlight text-primary mb-0">{{ voting.author }}</h2>
+        <div class="flex d-flex mb-0 ms-auto justify-content-center align-items-center">
+          {% block results %}
+            <a href="/voting/{{ voting.id }}/results" class="res-button btn btn-success">Посмотреть результаты</a>
+          {% endblock %}
+          {% if request.user == voting.author %}
+            <a href="/voting/{{ voting.id }}/edit" class="btn btn-secondary ms-2">Редактировать</a>
+          {% endif %}
+        </div>
       </div>
     </div>
+    {% if eligible_to_vote %}
+      <a href="/voting/{{ voting.id }}/vote" class="btn btn-primary btn-lg">Проголосовать</a>
+    {% endif %}
   </div>
-  {% if eligible_to_vote %}
-  <a href="/voting/{{voting.id}}/vote" class="btn btn-primary btn-lg">Проголосовать</a>
-  {% endif %}
-</div>
 {% endblock %}
