--- a/main/templates/pages/votingEdit.html
+++ b/main/templates/pages/votingEdit.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block heading %}
-Редактировать Голосование
+Редактировать опрос
 {% endblock %}
 
 {% block content %}
@@ -18,8 +18,12 @@
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+          <button type="submit" class="btn btn-primary">Сохранить</button>
         {% endbuttons %}
+      </form>
+      <form method="post" action="{% url 'voting_delete' pk=id %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Удалить опрос</button>
       </form>
     </div>
   </div>
