--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="d-flex h-300 text-center">
-    <div class="mt-5 d-flex w-50 h-300 p-3 mx-auto flex-column">
+    <div class="mt-5 d-flex h-300 p-3 mx-auto flex-column">
       <h3 class=" mt-4">Здесь вы можете оставить отзыв/мнение о чем угодно, а также создать своё собственный
         опрос,
         чтобы узнать мнение других посетителей нашего сайта.</h3>
