--- a/main/templates/pages/vote.html
+++ b/main/templates/pages/vote.html
@@ -11,19 +11,10 @@
     <div class="card mb-4">
       <div class="card-header d-flex justify-content-between">
         <div>
-          <h3 class="m-0">{{ voting.name }}</h3>
-        </div>
-        <div>
-          <a
-            href="/voting/{{voting.id}}/complain/"
-            role="button"
-            class="btn btn-sm btn-outline-danger"
-          >
-            Пожаловаться
-          </a>
+          <h3 class="m-0 text-break">{{ voting.name }}</h3>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body text-break">
         <p class="mb-4">{{ voting.description }}</p>
         {% if voting.type == 2 %}
         <div class="d-flex justify-content-around">
