--- a/main/templates/pages/vote.html
+++ b/main/templates/pages/vote.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container w-50">
+<div class="container">
   <form method="POST">
     {% csrf_token %}
     <div class="card mb-4">
