--- a/main/templates/pages/profile.html
+++ b/main/templates/pages/profile.html
@@ -53,19 +53,9 @@
     <div class="col">
       <div class="container">
         <dl class="row">
-          <a href="{% url 'votings_list' %}?user={{ user.id }}">
+          <a href={% url 'votings_list' %}>
             <button class="btn btn-secondary" type="button">Созданные голосования</button>
           </a>
-        </dl>
-        <dl class="row">
-          <div class="dropdown">
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              {% for com in complaints %}
-                <li><a class="dropdown-item" href="{% url 'complaint' com.id %}">Голосование '{{ com.voting.name }}'</a>
-                </li>
-              {% endfor %}
-            </ul>
-          </div>
         </dl>
         <dl class="row">
           <div class="dropdown">
