--- a/main/templates/pages/votings_list.html
+++ b/main/templates/pages/votings_list.html
@@ -12,7 +12,7 @@
 {% block content %}
   {% if not votings %}
     <p align="center">
-    <h2> Пока нет голосований </h2>
+    <h2> Пока нет созданных опросов </h2>
     </p>
   {% endif %}
   {% for voting in votings %}
