Отредактирован шаблон профиля

--- a/main/templates/pages/profile_edit.html
+++ b/main/templates/pages/profile_edit.html
@@ -31,7 +31,7 @@
           <input class="btn btn-primary" onclick=ce() type="button" value="Изменить почту">
         </div>
         <div class="mb-4 row">
-          <input class="btn btn-primary" onclick=cp() type="button" value="Сменить пароль">
+          <input class="btn btn-primary" onclick=cp() type="button" value="Изменить пароль">
         </div>
       </div>
 
