Изменён текст на главной странице

--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -9,7 +9,7 @@
     <div class="mt-5 d-flex h-300 p-3 mx-auto flex-column">
       <h3 class=" mt-4">Здесь вы можете оставить отзыв/мнение о чем угодно, а также создать своё собственный
         опрос,
-        чтобы узнать мнение других посетителей нашего сайта.</h3>
+        чтобы узнать мнение других посетителей сайта.</h3>
       {% if auth %}
       {% else %}
         <h5 class="lead mt-4">Создавать опросы и оставлять голоса могут только авторизованные пользователи.</h5>
